k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brewsource-prod
  labels:
    name: brewsource-prod
    environment: production
